--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "churakovmike/laravel-clickhouse",
+    "name": "zolotov88/laravel-clickhouse",
     "type": "library",
     "description": "Eloquent extension with Clickhouse",
     "keywords": [
@@ -27,8 +27,8 @@
     "require": {
         "php": "^7.4|^8.0",
         "guzzlehttp/guzzle": "*",
-        "illuminate/database": "^6.0|^7.0|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "illuminate/database": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0"
     },
     "config": {
         "sort-packages": true
